objects/vlocity_ins__VlocityUITemplate__c.object
<CustomObject>
    <description>Vlocity UI Templates to be used in various applications</description>
    <fields>
        <fullName>vlocity_ins__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set the template as active and ready to be used</description>
        <inlineHelpText>Set the template as active and ready to be used</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Author__c</fullName>
        <description>The author of the UI Template.</description>
        <inlineHelpText>The author of the UI Template.</inlineHelpText>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CSS__c</fullName>
        <label>CSS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomJavascript__c</fullName>
        <label>Custom Javascript</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Definition__c</fullName>
        <description>Defines certain properties of the Vlocity UI Template that dictates functionality.</description>
        <label>Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>This field holds a description of the template.</description>
        <inlineHelpText>This field holds a description of the template.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayOn__c</fullName>
        <description>Device / Form factor in which the template is intended to be used</description>
        <label>Display On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HTML__c</fullName>
        <description>HTML for this Template</description>
        <label>HTML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentID__c</fullName>
        <externalId>true</externalId>
        <label>Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SampleJson__c</fullName>
        <label>Sample JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sass__c</fullName>
        <label>Sass</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canvas</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Input</fullName>
                </value>
                <value>
                    <fullName>OmniScript</fullName>
                </value>
                <value>
                    <fullName>OmniScript Modal</fullName>
                </value>
                <value>
                    <fullName>OmniScript Redirect</fullName>
                </value>
                <value>
                    <fullName>OmniScript Selectable Items</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Version number of the template.</description>
        <inlineHelpText>Version number of the template.</inlineHelpText>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity UI Template</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Author__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity UI Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>